name:           elm-build-test
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         jse313

library
  exposed-modules: Language.Elm.Build
  hs-source-dirs:  src
  build-depends:   base >= 4
                   , Elm
                   , directory
                   , process
                   , temporary
  ghc-options:     -Wall

